# indexlake

./: .gitignore  Cargo.toml  README.md  init_catalog.sql
.github/workflows/: ci.yml
benchmarks/: Cargo.toml
benchmarks/src/: data.rs  lib.rs
catalogs/postgres/: Cargo.toml
catalogs/postgres/src/: builder.rs  catalog.rs  lib.rs
catalogs/sqlite/: Cargo.toml
catalogs/sqlite/src/: catalog.rs
indexes/bm25/: Cargo.toml
indexes/bm25/src/: builder.rs  index.rs  kind.rs  lib.rs  scorer.rs  tokenizer.rs
indexes/btree/: Cargo.toml
indexes/btree/src/: builder.rs  index.rs  kind.rs  lib.rs  node.rs
indexes/hash/: Cargo.toml
indexes/hash/src/: index.rs
indexes/hnsw/: Cargo.toml
indexes/hnsw/src/: builder.rs  index.rs  kind.rs  lib.rs
indexes/rstar/: Cargo.toml
indexes/rstar/src/: builder.rs  index.rs  kind.rs  lib.rs
indexlake/: Cargo.toml
indexlake/src/: client.rs  error.rs  lib.rs  utils.rs
indexlake/src/arrow/: mod.rs  record.rs  schema.rs
indexlake/src/catalog/: database.rs  helper.rs  mod.rs  record.rs  row.rs  scalar.rs  schema.rs
indexlake/src/catalog/helper/: create.rs  delete.rs  drop.rs  insert.rs  mod.rs  query.rs  truncate.rs  update.rs
indexlake/src/expr/: binary.rs  builder.rs  case.rs  compute.rs  like.rs  mod.rs  utils.rs  visitor.rs
indexlake/src/index/: defination.rs  manager.rs  mod.rs
indexlake/src/record/: datatype.rs  field.rs  mod.rs  row.rs  scalar.rs  schema.rs
indexlake/src/schema/: datatype.rs  field.rs  mod.rs
indexlake/src/storage/: fs.rs  lance.rs  mod.rs  parquet.rs  s3.rs
indexlake/src/storage/parquet/: mod.rs
indexlake/src/table/: config.rs  create.rs  delete.rs  drop.rs  dump.rs  insert.rs  mod.rs  scan.rs  search.rs  truncate.rs  update.rs
integration-tests/: Cargo.toml
integration-tests/src/: data.rs  docker.rs  lib.rs  utils.rs
integration-tests/testdata/minio/: docker-compose.yaml
integration-tests/testdata/postgres/: docker-compose.yaml  init_catalog.sql
integration-tests/testdata/sqlite/: init_catalog.sql
integration-tests/tests/: catalog.rs  catalog_postgres.rs  catalog_sqlite.rs  create_index.rs  create_namespace.rs  create_table.rs  datafusion.rs  delete.rs  drop.rs  index_bm25.rs  index_btree.rs  index_hnsw.rs  index_rstar.rs  insert.rs  namespace.rs  scan.rs  storage.rs  table_delete.rs  table_insert.rs  table_ops.rs  table_scan.rs  table_truncate_drop.rs  table_update.rs  truncate.rs  update.rs
integrations/datafusion/: Cargo.toml
integrations/datafusion/src/: codec.rs  expr.rs  insert.rs  lib.rs  protobuf.rs  scan.rs  table.rs
