[workspace]
members = [
    "catalogs/postgres",
    "catalogs/sqlite",
    "indexes/bm25",
    "indexes/hash",
    "indexes/hnsw",
    "indexes/rstar",
    "indexlake",
    "integration-tests",
    "integrations/datafusion",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/lewiszlw/indexlake"
license = "MIT"
repository = "https://github.com/lewiszlw/indexlake"

[workspace.dependencies]
indexlake = { path = "indexlake" }
indexlake-catalog-postgres = { path = "catalogs/postgres" }
indexlake-catalog-sqlite = { path = "catalogs/sqlite" }
indexlake-datafusion = { path = "integrations/datafusion" }
indexlake-index-bm25 = { path = "indexes/bm25" }
indexlake-index-hash = { path = "indexes/hash" }
indexlake-index-hnsw = { path = "indexes/hnsw" }
indexlake-index-rstar = { path = "indexes/rstar" }

arrow = "55"
async-trait = "0.1"
bb8 = "0.9"
bb8-postgres = "0.9"
bytes = "1.10"
comfy-table = "7.0"
datafusion = "47"
derive-visitor = "0.4"
env_logger = "0.11"
futures = "0.3"
hex = "0.4"
log = "0.4"
opendal = "0.53"
parquet = "55.1"
rstest = "0.25"
rusqlite = "0.36"
serde = "1.0"
serde_json = "1.0"
tokio = "1"
url = "2.5"
uuid = "1.17"