[workspace]
members = [
    "benchmarks",
    "catalogs/postgres",
    "catalogs/sqlite",
    "indexes/bm25",
    "indexes/btree",
    "indexes/hnsw",
    "indexes/rstar",
    "indexlake",
    "integration-tests",
    "integrations/datafusion",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/lewiszlw/indexlake"
license = "MIT"
repository = "https://github.com/lewiszlw/indexlake"

[workspace.dependencies]
indexlake = { path = "indexlake" }
indexlake-catalog-postgres = { path = "catalogs/postgres" }
indexlake-catalog-sqlite = { path = "catalogs/sqlite" }
indexlake-datafusion = { path = "integrations/datafusion" }
indexlake-index-bm25 = { path = "indexes/bm25" }
indexlake-index-btree = { path = "indexes/btree" }
indexlake-index-hnsw = { path = "indexes/hnsw" }
indexlake-index-rstar = { path = "indexes/rstar" }
indexlake-integration-tests = { path = "integration-tests" }

arrow = "55"
arrow-schema = "55"
async-trait = "0.1"
bb8 = "0.9"
bb8-postgres = "0.9"
bm25 = "2.3"
bytes = "1.10"
comfy-table = "7.0"
datafusion = "48"
derive-visitor = "0.4"
derive-with = "0.6"
env_logger = "0.11"
futures = "0.3"
geo = "0.30"
geozero = "0.14"
hex = "0.4"
log = "0.4"
num_cpus = "1.14"
opendal = "0.53"
parquet = "55.1"
rand = "0.9"
rstar = "0.12"
rstest = "0.25"
rusqlite = "0.36"
serde = "1.0"
serde_json = "1.0"
tokio = "1"
url = "2.5"
uuid = "1.17"