[workspace]
members = [
    "benchmarks",
    "catalogs/postgres",
    "catalogs/sqlite",
    "indexes/bm25",
    "indexes/hnsw",
    "indexes/rstar",
    "indexlake",
    "integration-tests",
    "integrations/datafusion",
    "integrations/datafusion/gen",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/lewiszlw/indexlake"
license = "MIT"
repository = "https://github.com/lewiszlw/indexlake"
rust-version = "1.88.0"

[workspace.dependencies]
indexlake = { path = "indexlake", version = "0.1.0" }
indexlake-catalog-postgres = { path = "catalogs/postgres", version = "0.1.0" }
indexlake-catalog-sqlite = { path = "catalogs/sqlite", version = "0.1.0" }
indexlake-datafusion = { path = "integrations/datafusion", version = "0.1.0" }
indexlake-index-bm25 = { path = "indexes/bm25", version = "0.1.0" }
indexlake-index-hnsw = { path = "indexes/hnsw", version = "0.1.0" }
indexlake-index-rstar = { path = "indexes/rstar", version = "0.1.0" }
indexlake-integration-tests = { path = "integration-tests", version = "0.1.0" }

arrow = "55"
arrow-schema = "55"
async-stream = "0.3.6"
async-trait = "0.1"
bb8 = "0.9"
bb8-postgres = "0.9"
bincode = "1.3"
bm25 = "2.3"
bytes = "1.10"
comfy-table = "7.0"
datafusion = "48"
datafusion-proto = "48"
derive-visitor = "0.4"
derive-with = "0.6"
env_logger = "0.11"
futures = "0.3"
geo = "0.30"
geozero = "0.14"
hex = "0.4"
hnsw = "0.11"
jieba-rs = "0.7"
lance-core = "0.32"
lance-encoding = "0.32"
lance-file = "0.32"
lance-io = "0.32"
log = "0.4"
num_cpus = "1.14"
opendal = "0.53"
parquet = "55.1"
prost = "0.13"
prost-build = "0.13"
rand = "0.9"
rand_pcg = "0.9"
rstar = "0.12"
rstest = "0.25"
rusqlite = "0.36"
serde = "1.0"
serde_json = "1.0"
space = "0.17"
tokio = "1"
url = "2.5"
uuid = "1.17"