[package]
name = "indexlake"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "An experimental table format with extensible index support."

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
backon = { workspace = true }
bytes = { workspace = true }
comfy-table = { workspace = true }
derive-visitor = { workspace = true, features = ["std-types-drive"] }
derive-with = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
opendal = { workspace = true, features = ["services-fs", "services-s3"] }
parquet = { workspace = true, features = ["async"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"]}
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }