[package]
name = "indexlake"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "An experimental table format with extensible index support."

[features]
lance-format = ["dep:lance-core", "dep:lance-encoding", "dep:lance-file", "dep:lance-io"]

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true, features = ["serde"]}
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
comfy-table = { workspace = true }
derive-visitor = { workspace = true, features = ["std-types-drive"] }
derive-with = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
lance-core = { workspace = true, optional = true }
lance-encoding = { workspace = true, optional = true }
lance-file = { workspace = true, optional = true }
lance-io = { workspace = true, optional = true }
log = { workspace = true }
opendal = { workspace = true, features = ["services-fs", "services-s3"] }
parquet = { workspace = true, features = ["async"] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"]}
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "v7"] }