[package]
name = "indexlake-integration-tests"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
indexlake = { workspace = true }
indexlake-catalog-postgres = { workspace = true }
indexlake-catalog-sqlite = { workspace = true }

arrow = { workspace = true, features = ["prettyprint"]}
bytes = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
opendal = { workspace = true, features = ["services-fs", "services-s3"] }
rstest = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }