[package]
name = "indexlake-integration-tests"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
indexlake = { workspace = true }
indexlake-catalog-postgres = { workspace = true }
indexlake-catalog-sqlite = { workspace = true }
indexlake-datafusion = { workspace = true }
indexlake-index-bm25 = { workspace = true }
indexlake-index-hnsw = { workspace = true }
indexlake-index-rstar = { workspace = true }

arrow = { workspace = true, features = ["prettyprint"]}
bytes = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true, features = ["with-wkb"] }
log = { workspace = true }
opendal = { workspace = true, features = ["services-fs", "services-s3"] }
rstest = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }