[package]
name = "indexlake-catalog-postgres"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
indexlake = { workspace = true }

async-trait = { workspace = true }
bb8 = { workspace = true }
bb8-postgres = { workspace = true, features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
uuid = { workspace = true }