[package]
name = "indexlake-catalog-sqlite"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
indexlake = { workspace = true }

arrow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
rusqlite = { workspace = true }