[package]
name = "indexlake-index-btree"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
indexlake = { workspace = true }

arrow = { workspace = true }
async-trait = { workspace = true}
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }