[package]
name = "indexlake-index-btree"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "IndexLake B-tree index"

[dependencies]
arrow.workspace = true
async-trait.workspace = true
futures.workspace = true
indexlake.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
