[package]
name = "indexlake-index-hnsw"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "IndexLake hnsw index"

[dependencies]
indexlake = { workspace = true }

arrow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
hnsw = { workspace = true, features = ["serde1"] }
rand_pcg = { version = "0.3", features = ["serde1"] }
serde = { workspace = true }
serde_json = { workspace = true }
space = { workspace = true }