[package]
name = "indexlake-index-rstar"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "IndexLake rstar index"

[dependencies]
indexlake = { workspace = true }

arrow = { workspace = true }
async-trait = { workspace = true}
futures = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true, features = ["with-wkb"] }
rstar = { workspace = true }
parquet = { workspace = true, features = ["async"] }
serde = { workspace = true }
serde_json = { workspace = true }