[package]
name = "indexlake-datafusion"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
indexlake = { workspace = true }

async-trait = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
tokio = { workspace = true }